--- a/distro/debian/dms/debian/changelog
+++ b/distro/debian/dms/debian/changelog
@@ -1,3 +1,9 @@
+dms (1.0.3db1) unstable; urgency=medium
+
+  * Update to v1.0.3 stable release
+
+ -- Avenge Media <AvengeMedia.US@gmail.com>  Mon, 16 Dec 2025 10:00:00 +0000
+
 dms (1.0.2db1) unstable; urgency=medium
 
   * Update to v1.0.2 stable release
